# cocoa_project

./: .gitignore  config.py  docker-compose.yml  my_app.py  pyproject.toml
app/: __init__.py  models.py
app/apiv1/: __init__.py  general.py  images.py  ml_models.py  predictions.py
app/utils/: images.py
